--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a39</version>
-    <!--##teamcity[buildNumber '1.0a39']-->
+    <version>1.0a40</version>
+    <!--##teamcity[buildNumber '1.0a40']-->
     <idea-version since-build="110.137" until-build="117.9999"/>
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -67,6 +67,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>1.0a40</dt>
+            <dd>Improvements to completions and type inferences</dd><br>
             <dt>1.0a26-39</dt>
             <dd>Bug Fixes</dd><br>
             <dt>1.0a24-5</dt>
