--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -81,6 +81,7 @@ lua.usages.type=Lua Code
 luadoc.usages.type=LuaDoc Text
 new.library.file.chooser.title=New Library Files
 new.library.file.chooser.description=Select jar files or directories in which library files are located
+inferrencer.first.run=Inferring and Propagating Lua Types
 
 
 
