cleaned up the globals cache builder a bit

--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -82,6 +82,8 @@ luadoc.usages.type=LuaDoc Text
 new.library.file.chooser.title=New Library Files
 new.library.file.chooser.description=Select jar files or directories in which library files are located
 inferrencer.first.run=Inferring and Propagating Lua Types
+inferrencer.working=Working...
+inferrencer.finding.files=Scanning Files To Inference
 
 
 
