Add problem file highlighter

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -122,6 +122,7 @@
 
         <readWriteAccessDetector implementation="com.sylvanaar.idea.Lua.editor.highlighter.LuaReadWriteAccessDetector" />
 
+        <problemFileHighlightFilter implementation="com.sylvanaar.idea.Lua.editor.highlighter.LuaProblemFileHighlightFilter"/>
         <!--<quoteHandler fileType="Lua" className="com.sylvanaar.idea.Lua.editor.highlighter.LuaQuoteHandler" />-->
 
         <!-- Annotator extensions -->
