Missing module type name

--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -84,6 +84,8 @@ new.library.file.chooser.description=Select jar files or directories in which li
 inferrencer.first.run=Inferring and Propagating Lua Types
 inferrencer.working=Working...
 inferrencer.finding.files=Scanning Files To Inference
+module.type.name=Lua Module
+module.type.description=Lua Module
 
 
 
